Fix `test` task JVM args when running on Java 11